# io_uring

./: .gitignore  BUILD  Cargo.toml  MODULE.bazel  Makefile  README.md
benchmark/: draw.py  echo_server_epoll.cpp  echo_server_io_uring.cpp  echo_server_io_uring_kernel_poll.cpp  echo_server_select.cpp  run_benchmark.py
docs/record/: benchmark_20241109_115344.json  benchmark_20241109_120647.json  benchmark_20241109_153619.json
docs/record/disk/: benchmark_20241109_175854.json  benchmark_20241109_181333.json  benchmark_20241111_005513.json
docs/record/echo_server/: benchmark_20241109_160204.json
scripts/: run_benchmark.py  show_details.py
src/: io_uring.cpp
tmp/: Cargo.toml  write_trace.txt
tmp/tests/benchmark/: bench.rs
